[gd_scene load_steps=24 format=3 uid="uid://ccfnvvfj0yyrq"]

[ext_resource type="Shader" path="res://UI/Shaders/GlintShader.gdshader" id="1_att70"]
[ext_resource type="Script" path="res://Entities/Items/ItemCore/Item.gd" id="1_rwd02"]
[ext_resource type="Texture2D" uid="uid://ifknxghk7xey" path="res://Entities/Items/line_group.png" id="3_jg0uy"]
[ext_resource type="Texture2D" uid="uid://b6q76o13tanxi" path="res://Entities/Items/Weapons/MeleeWeapons/Pickaxe/pickaxe.png" id="4_1yl86"]
[ext_resource type="Texture2D" uid="uid://dbm40lvpgbd8t" path="res://Entities/Items/item_rarity_light.png" id="5_2unly"]

[sub_resource type="CircleShape2D" id="CircleShape2D_no3c7"]
resource_local_to_scene = true
radius = 4.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_njrp7"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_lulwp"]
_data = [Vector2(0, 0.51358), 0.0, 0.0, 0, 0, Vector2(1, 0.216845), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_h672o"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_36jrh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_o0adq"]
_data = [Vector2(0, 0.506068), 0.0, 0.0, 0, 0, Vector2(1, 0.506068), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_yr7lw"]
offsets = PackedFloat32Array(0, 0.486692, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0.631, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_8c7dk"]
offsets = PackedFloat32Array(0.321277)
colors = PackedColorArray(0.931609, 0, 0.320733, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u0r6t"]
gradient = SubResource("Gradient_8c7dk")

[sub_resource type="Gradient" id="Gradient_ujuwf"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.486957, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pytf7"]
gradient = SubResource("Gradient_ujuwf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qrrcp"]
resource_local_to_scene = true
shader = ExtResource("1_att70")
shader_parameter/outline_color = Color(2, 0.768, 0.984, 1)
shader_parameter/width = 0.5
shader_parameter/pattern = 2
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/size_effect = 0.4
shader_parameter/speed = 0.9
shader_parameter/highlight_strength = 0.4
shader_parameter/color_mode_toggle = true
shader_parameter/pause_duration = 1.0
shader_parameter/angle = 35.0
shader_parameter/tint_color = Color(1, 0.20122, 0.303155, 0.186)
shader_parameter/glow_intensity = 1.191
shader_parameter/random_start_offset = 0.0
shader_parameter/vertical_gradient = SubResource("GradientTexture1D_pytf7")
shader_parameter/color_gradient = SubResource("GradientTexture1D_u0r6t")

[sub_resource type="Animation" id="Animation_5tv4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4d1l1"]
resource_name = "hover"
length = 3.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GroundGlowScaler:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.75, 0.75), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_w43ql"]
resource_name = "remove"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_remove_anim_completed"
}]
}

[sub_resource type="Animation" id="Animation_i3ewg"]
resource_name = "spawn"
length = 0.08
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08),
"transitions": PackedFloat32Array(1, 0.378929),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.08),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_spawn_anim_completed"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wgl0c"]
_data = {
"RESET": SubResource("Animation_5tv4j"),
"hover": SubResource("Animation_4d1l1"),
"remove": SubResource("Animation_w43ql"),
"spawn": SubResource("Animation_i3ewg")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mrolm"]
blend_mode = 1

[node name="Item" type="Area2D" groups=["Items", "has_save_logic"]]
collision_layer = 0
collision_mask = 256
monitorable = false
script = ExtResource("1_rwd02")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_no3c7")
debug_color = Color(5.29438e-07, 0.636012, 0.41019, 0.42)

[node name="Particles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_njrp7")
position = Vector2(0, -9)
emitting = false
amount = 6
lifetime = 0.85
texture = ExtResource("5_2unly")
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 15.0
orbit_velocity_min = -0.08
orbit_velocity_max = 0.08
damping_max = 10.0
scale_amount_min = 0.01
scale_amount_max = 0.01
scale_amount_curve = SubResource("Curve_lulwp")
hue_variation_min = -0.5
hue_variation_max = 0.5

[node name="LineParticles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_h672o")
position = Vector2(0, -8)
emitting = false
amount = 5
lifetime = 2.0
lifetime_randomness = 0.2
texture = ExtResource("3_jg0uy")
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
tangential_accel_min = -0.5
tangential_accel_max = 0.5
damping_min = 4.0
damping_max = 5.0
angle_min = -1.0
angle_max = 1.0
scale_amount_min = 0.05
scale_amount_max = 0.07
scale_amount_curve = SubResource("Curve_36jrh")
split_scale = true
scale_curve_x = null
scale_curve_y = SubResource("Curve_o0adq")
color = Color(2, 0.304, 0.606, 1)
color_ramp = SubResource("Gradient_yr7lw")
anim_offset_max = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qrrcp")
position = Vector2(0, -8)
texture = ExtResource("4_1yl86")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wgl0c")
}
autoplay = "spawn"

[node name="GroundGlowScaler" type="Node2D" parent="."]

[node name="GroundGlow" type="Sprite2D" parent="GroundGlowScaler"]
material = SubResource("CanvasItemMaterial_mrolm")
scale = Vector2(0.05, 0.035)
texture = ExtResource("5_2unly")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
